--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.0.0",
     "json-server": "^0.17.1",
     "json-server-auth": "^2.1.0",
+    "ngx-toastr": "^16.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
