--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@angular/youtube-player": "^15.2.0",
     "json-server": "^0.17.1",
     "json-server-auth": "^2.1.0",
     "ngx-toastr": "^16.0.2",
